deploy/prow/gcsweb_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gcsweb-http-redirect
  namespace: gcsweb
  labels:
    app: gcsweb
spec:
  parentRefs:
  - name: gcsweb
    namespace: gcsweb
    sectionName: http
  hostnames:
  - gcsweb.prow.gardener.cloud
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gcsweb
  namespace: gcsweb
  labels:
    app: gcsweb
spec:
  parentRefs:
  - name: gcsweb
    namespace: gcsweb
    sectionName: https
  hostnames:
  - gcsweb.prow.gardener.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gcsweb
      port: 80
